k3s/generated_manifests/authentik/Deployment-authentik-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2026.2.2
    helm.sh/chart: authentik-2026.2.2
  name: authentik-worker
  namespace: authentik
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  template:
    metadata:
      annotations:
        checksum/secret: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/instance: authentik
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: authentik
        app.kubernetes.io/part-of: authentik
        app.kubernetes.io/version: 2026.2.2
        helm.sh/chart: authentik-2026.2.2
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: worker
                    app.kubernetes.io/instance: authentik
                    app.kubernetes.io/name: authentik
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - worker
          image: ghcr.io/goauthentik/server:2026.2.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - ak
                - healthcheck
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: worker
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
            - containerPort: 9300
              name: metrics
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - ak
                - healthcheck
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources: {}
          startupProbe:
            exec:
              command:
                - ak
                - healthcheck
            failureThreshold: 60
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
      enableServiceLinks: true
      serviceAccountName: authentik
      terminationGracePeriodSeconds: 30
