k3s/generated_manifests/authentik/Service-authentik-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2026.2.2
    helm.sh/chart: authentik-2026.2.2
  name: authentik-server
  namespace: authentik
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
  type: ClusterIP
