k3s/generated_manifests/authentik/Ingress-authentik-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2026.2.1
    helm.sh/chart: authentik-2026.2.1
  name: authentik-server
  namespace: authentik
spec:
  rules:
    - host: authentik.doma.lol
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 80
            path: /
            pathType: Prefix
