k3s/generated_manifests/authentik/Ingress-authentik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
spec:
  ingressClassName: traefik
  rules:
    - host: authentik.doma.lol
