k3s/generated_manifests/authentik/IngressRoute-authentik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`authentik.doma.lol`)
      services:
        - name: authentik-server
          port: 80
